--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,8 +1,8 @@
 <div class="max-w-[554px] bg-white border border-gray-300 rounded-md shadow">
     <div class="flex justify-between items-center p-2">
-        <p class="text-sm font-medium text-gray-900 truncate">
+        <a [routerLink]="['/profile', post().user.username]" class="block text-sm font-medium text-gray-900 truncate">
             {{ post().user.name | LetterUppercasePipe}}
-        </p>
+        </a>
         <span class="block text-sm font-medium text-gray-500 truncate">{{ post().createdAt | DateLocalePipe}}</span>
     </div>
     <img src={{post().imagen_url}} class="w-full object-cover object-center" alt={{post().user.name}}>
@@ -17,24 +17,35 @@
                     <app-heart-icon />
                     }
                 </button>
-                <button class="-rotate-90">
+                <a [routerLink]="['/p', post()._id]" class="-rotate-90 block">
                     <app-chat-bubble-aval-icon />
-                </button>
+                </a>
                 <button class="-rotate-45">
                     <app-paper-airplane-icon />
                 </button>
             </div>
-            <button>
+            <button (click)="handleAddOrDeleteBookMark(post()._id)">
+                @if (isBookMark()) {
+                <app-bookmark-solid-icon class="text-gray-700" />
+                }
+                @else {
                 <app-bookmark-icon />
+                }
             </button>
         </div>
+        @if (quantityLike() > 0) {
         <p class="text-sm font-medium text-gray-700">
-            100 Me gusta
+            {{quantityLike()}} Me gusta
         </p>
+        }
         <p class="text-sm text-gray-700 font-normal">
             {{post().comment}}
         </p>
-        <a href="#" class="text-sm text-gray-500 font-medium hover:text-gray-800">Ver los 6 comentarios</a>
+        @if (quantityComment() > 0) {
+        <a [routerLink]="['/p', post()._id]" class="text-sm text-gray-500 font-medium hover:text-gray-800">
+            Ver los {{ quantityComment() }} comentarios
+        </a>
+        }
         <form action="" class="mt-1">
             <input type="text" placeholder="Agrega un comentario..."
                 class="w-full py-1 px-2 outline-none text-gray-700 font-normal text-sm">
