--- a/src/app/pages/home/profile/profile.component.html
+++ b/src/app/pages/home/profile/profile.component.html
@@ -1,1 +1,13 @@
-<p>profile works!</p>
+<div class="pt-20">
+    <div>
+        <p className='text-center text-2xl text-gray-900 font-normal'>
+            Kendra Contreras
+        </p>
+        <small className='block text-center text-gray-700 font-light'>
+            kcontreras
+        </small>
+    </div>
+    <div>
+
+    </div>
+</div>
