--- a/src/app/pages/home/upload/upload.component.html
+++ b/src/app/pages/home/upload/upload.component.html
@@ -1,1 +1,36 @@
-<p>upload works!</p>
+<div class="min-h-screen">
+    <div class="mx-auto max-w-xs mt-10">
+        @if (loading()) {
+        <div class='flex justify-center w-[250px] border border-gray-500 py-2 px-4 space-x-2 rounded-md bg-pink-500'>
+            <p class='text-white font-medium'>Cargando ...</p>
+        </div>
+        }
+        @else {
+        <label for="file-input"
+            class='flex justify-center w-[250px] border border-gray-500 py-2 px-4 space-x-2 rounded-md bg-pink-600 hover:bg-pink-700 hover:cursor-pointer'>
+            <div>
+                <app-photo-solid-icon class='w-5 h-5 text-white' />
+            </div>
+            <p class='text-white font-medium'>Cargar un Imagen</p>
+        </label>
+        <input id="file-input" type="file" (change)="readImageUrl($event)" [formControl]="image"
+            accept='.png, .jpeg, .jpg' class="hidden">
+        }
+    </div>
+    @if (imageSrc) {
+    <div class="mt-3 mx-auto max-w-xl flex flex-col items-center justify-center">
+        <img [src]="imageSrc" alt="" class="block object-cover object-center">
+        <textarea name="comment" [formControl]="comment" placeholder='Escribe un comentario'
+            class="block resize-none mt-5 outline-none p-2 w-full text-sm font-medium text-gray-600 rounded-md bg-white border border-pink-300"></textarea>
+        <button (click)="handleSubmit()" [disabled]="loading()"
+            class="mt-5 text-white bg-pink-700 hover:bg-pink-600 focus:ring-4 focus:ring-pink-300 disabled:bg-pink-500 font-medium rounded-md text-sm px-10 py-2">
+            @if (loading()) {
+            Cargando ...
+            }
+            @else {
+            Subit Imagen
+            }
+        </button>
+    </div>
+    }
+</div>
