--- a/src/app/pages/home/profile/posts/posts.component.html
+++ b/src/app/pages/home/profile/posts/posts.component.html
@@ -10,8 +10,7 @@
     }
     @else {
     <p class="text-lg text-center text-gray-900 mt-2">
-        No tienes publicaciones
+        Aún no hay publicaciones
     </p>
     }
-
 </div>
