--- a/src/app/pages/home/profile/saved/saved.component.html
+++ b/src/app/pages/home/profile/saved/saved.component.html
@@ -1,1 +1,16 @@
-<p>saved works!</p>
+<div class="mt-2">
+    @if(bookMarksByUser()?.length) {
+    <div class="grid grid-cols-3 gap-1">
+        @for (post of bookMarksByUser(); track post._id) {
+        <a [routerLink]="['/p', post._id]">
+            <img src={{post.imagen_url}} alt={{post.user.username}} class="h-40 w-full object-cover object-center">
+        </a>
+        }
+    </div>
+    }
+    @else {
+    <p class="text-lg text-center text-gray-900 mt-2">
+        Aún no hay Fotos Guardados
+    </p>
+    }
+</div>
