Add Search Users

--- a/src/app/pages/home/profile/profile.component.html
+++ b/src/app/pages/home/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="mt-7 max-w-5xl mx-auto min-h-screen">
+<div class=" max-w-5xl mx-auto min-h-screen">
     <article class="">
         <p class="text-center text-lg text-pink-700 font-medium">
             {{ user()?.name | LetterUppercasePipe }}
