--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,55 +1,59 @@
-<div class="flex flex-col items-center justify-center mt-10">
-    <div class="w-full max-w-sm p-4 bg-white border border-gray-300 rounded-md shadow">
-        <h3 class="text-xl font-medium text-gray-900 text-center mb-5">
-            Crea tu cuenta
-        </h3>
-        <form [formGroup]="initialForm" (ngSubmit)="handleSubmit($event)" class="space-y-6">
-            <div>
-                <app-input type="text" placeholder="Nombres" formControlName="name" />
-                @if (initialForm.get('name')?.errors && initialForm.get('name')?.touched) {
-                <p class="mt-2 text-xs text-red-600 font-medium">
-                    {{ initialForm.get('name')?.errors | validationErrorInputPipe}}
-                </p>
-                }
-            </div>
-            <div>
-                <app-input type="text" placeholder="Username" formControlName="username" />
-                @if (initialForm.get('username')?.errors && initialForm.get('username')?.touched) {
-                <p class="mt-2 text-xs text-red-600 font-medium">
-                    {{ initialForm.get('username')?.errors | validationErrorInputPipe}}
-                </p>
-                }
-            </div>
-            <div>
-                <app-input type="password" placeholder="Contraseña" formControlName="password" />
-                @if (initialForm.get('password')?.errors && initialForm.get('password')?.touched) {
-                <p class="mt-2 text-xs text-red-600 font-medium">
-                    {{ initialForm.get('password')?.errors | validationErrorInputPipe}}
-                </p>
-                }
-            </div>
-            <div>
-                <button type="submit" [disabled]="disabledButton || !initialForm.valid"
-                    class="w-full text-white bg-pink-700 hover:bg-pink-800 focus:ring-4 focus:outline-none focus:ring-pink-300 font-medium rounded-md text-sm px-5 py-2.5 text-center disabled:bg-pink-500">
-                    @if (loading ) {
-                    Cargando ...
-                    } @else {
-                    Crea tu cuenta
+<div class="min-h-screen">
+    <div class="flex flex-col items-center pt-10">
+        <div class="w-full max-w-sm p-4 bg-white border border-gray-300 rounded-md shadow">
+            <h3 class="text-xl font-medium text-gray-900 text-center mb-5">
+                Crea tu cuenta
+            </h3>
+            <form [formGroup]="initialForm" (ngSubmit)="handleSubmit($event)" class="space-y-6">
+                <div>
+                    <app-input type="text" placeholder="Nombres" formControlName="name" />
+                    @if (initialForm.get('name')?.errors && initialForm.get('name')?.touched) {
+                    <p class="mt-2 text-xs text-red-600 font-medium">
+                        {{ initialForm.get('name')?.errors | validationErrorInputPipe}}
+                    </p>
                     }
-                </button>
-            </div>
-            <div class="text-sm font-medium text-gray-500">
-                ¿Tienes una cuenta? <a routerLink="/login" class="text-pink-700 hover:underline">Inicia Sesión</a>
-            </div>
-        </form>
+                </div>
+                <div>
+                    <app-input type="text" placeholder="Username" formControlName="username" />
+                    @if (initialForm.get('username')?.errors && initialForm.get('username')?.touched) {
+                    <p class="mt-2 text-xs text-red-600 font-medium">
+                        {{ initialForm.get('username')?.errors | validationErrorInputPipe}}
+                    </p>
+                    }
+                </div>
+                <div>
+                    <app-input type="password" placeholder="Contraseña" formControlName="password" />
+                    @if (initialForm.get('password')?.errors && initialForm.get('password')?.touched) {
+                    <p class="mt-2 text-xs text-red-600 font-medium">
+                        {{ initialForm.get('password')?.errors | validationErrorInputPipe}}
+                    </p>
+                    }
+                </div>
+                <div>
+                    <button type="submit" [disabled]="disabledButton || !initialForm.valid"
+                        class="w-full text-white bg-pink-700 hover:bg-pink-800 focus:ring-4 focus:outline-none focus:ring-pink-300 font-medium rounded-md text-sm px-5 py-2.5 text-center disabled:bg-pink-500">
+                        @if (loading ) {
+                        Cargando ...
+                        } @else {
+                        Crea tu cuenta
+                        }
+                    </button>
+                </div>
+                <div class="text-sm font-medium text-gray-500">
+                    ¿Tienes una cuenta? <a routerLink="/login" class="text-pink-700 hover:underline">Inicia Sesión</a>
+                </div>
+            </form>
+        </div>
+        <div>
+            @if (errors.length > 0) {
+            <ul class="w-full max-w-sm px-9 py-4 list-disc">
+                @for (error of errors; track $index) {
+                <li class="text-sm text-rose-700 font-medium">
+                    {{ error }}
+                </li>
+                }
+            </ul>
+            }
+        </div>
     </div>
-    @if (errors.length > 0) {
-    <ul class="w-full max-w-sm px-9 py-4 list-disc">
-        @for (error of errors; track $index) {
-        <li class="text-sm text-rose-700 font-medium">
-            {{ error }}
-        </li>
-        }
-    </ul>
-    }
 </div>
