--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,12 @@
-<div class="bg-gray-200">
-    <div class="fixed top-0 left-0 z-40">
+<div class="bg-gray-200 max-w-screen-lg mx-auto">
+    <div class="fixed">
         <app-sidebar />
     </div>
-    <div class="fixed top-0 z-40 left-16 xl:left-60 right-0 ">
-        <div class="bg-gray-200 flex justify-center">
-            <app-search-suggestions />
-        </div>
+    <div class="z-40 sticky ml-16 xl:ml-60 top-0">
+        <app-search-suggestions />
     </div>
-    <div class="ml-16 xl:ml-60 ">
-        <div class="p-4 mt-10">
+    <div class="ml-16 xl:ml-60">
+        <div class="p-4 mt-3">
             <router-outlet></router-outlet>
         </div>
     </div>
