--- a/src/app/pages/home/post/post.component.html
+++ b/src/app/pages/home/post/post.component.html
@@ -1,5 +1,5 @@
 <div class="min-h-screen">
-    <div class="max-w-lg mx-auto bg-white border border-gray-200 rounded-lg shadow mt-4">
+    <div class="max-w-lg mx-auto bg-white border border-gray-200 rounded-lg shadow ">
         <div class="flex justify-between px-3 py-2 items-center">
             <div class="flex flex-col">
                 <a [routerLink]="['/profile', post()?.user?.username]" class="text-base font-medium text-gray-500">
