--- a/src/app/pages/home/upload/upload.component.html
+++ b/src/app/pages/home/upload/upload.component.html
@@ -1,5 +1,5 @@
 <div class="min-h-screen">
-    <div class="mx-auto max-w-xs mt-10">
+    <div class="mx-auto max-w-xs">
         @if (loading()) {
         <div class='flex justify-center w-[250px] border border-gray-500 py-2 px-4 space-x-2 rounded-md bg-pink-500'>
             <p class='text-white font-medium'>Cargando ...</p>
@@ -17,6 +17,13 @@
             accept='.png, .jpeg, .jpg' class="hidden">
         }
     </div>
+    <div class='mt-3 flex justify-center'>
+        <ul class='flex items-center space-x-12 list-disc'>
+            <li class='text-gray-500 text-sm'>Formato: jpg, jpeg, png</li>
+            <li class='text-gray-500 text-sm'>Tamaño maximo: 2MB</li>
+        </ul>
+    </div>
+
     @if (imageSrc) {
     <div class="mt-3 mx-auto max-w-xl flex flex-col items-center justify-center">
         <img [src]="imageSrc" alt="" class="block object-cover object-center">
